Update [Business Understanding - Data Desc] Response Prediction Classification Marketing Campaign.ipynb

--- a/Response Prediction Classification Marketing Campaign.ipynb
+++ b/Response Prediction Classification Marketing Campaign.ipynb
@@ -140,9 +140,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b20fb6d-924e-4b53-ab25-3874028c4501",
+   "metadata": {},
+   "source": [
+    "# **Data Preparation**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2be96e4a-92e6-4610-9265-6d387add9214",
+   "metadata": {},
+   "source": [
+    "## **Data Description**\n",
+    "\n",
+    "```\n",
+    "🚨✨ This project is from Final Project Data Science Bootcamp Rakamin Academy Batch 32 ✨🚨\n",
+    "📌 The data is taken from kaggle - marketing_campaign.csv📌 \n",
+    "```\n",
+    "\n",
+    "**Marketing Campaign ([link datasets](https://www.kaggle.com/datasets/rodsaldanha/arketing-campaign))**\n",
+    "\n",
+    "_Boost the profit of a marketing campaign_\n",
+    "\n",
+    "A response model can provide a significant boost to the efficiency of a marketing campaign by increasing responses or reducing expenses. \n",
+    "\n",
+    "The objective is to predict who will respond to an offer for a product or service\n",
+    "\n",
+    "**Dataset Description:**\n",
+    "\n",
+    "The training dataset contains `2240 samples`. Contains `29 features` and `1 target boolean` variable `\"Response\"` :\n",
+    "\n",
+    "**Accepted/Responses Campaign**\n",
+    "\n",
+    "- `AcceptedCmp1` - 1 if customer accepted the offer in the 1st campaign, 0 otherwise\n",
+    "- `AcceptedCmp2` - 1 if customer accepted the offer in the 2nd campaign, 0 otherwise\n",
+    "- `AcceptedCmp3` - 1 if customer accepted the offer in the 3rd campaign, 0 otherwise\n",
+    "- `AcceptedCmp4` - 1 if customer accepted the offer in the 4th campaign, 0 otherwise\n",
+    "- `AcceptedCmp5` - 1 if customer accepted the offer in the 5th campaign, 0 otherwise\n",
+    "- `Response (target)` - 1 if customer accepted the offer in the last campaign, 0 otherwise\n",
+    "- `Complain` - 1 if customer complained in the previous 2 years\n",
+    "\n",
+    "**Customer Information**\n",
+    "\n",
+    "- `ID` - Customer's id\n",
+    "- `Year_Birth` - Customer's year of birth\n",
+    "- `Education` - customer’s level of education\n",
+    "- `Marital` - customer’s marital status\n",
+    "- `Kidhome` - number of small children in customer’s household\n",
+    "- `Teenhome` - number of teenagers in customer’s household\n",
+    "- `Income` - customer’s yearly household income\n",
+    "- `DtCustomer` - date of customer’s enrolment with the company\n",
+    "- `Recency` - number of days since the last purchase\n",
+    "\n",
+    "**Sales Product Type**\n",
+    "\n",
+    "- `MntFishProducts` - amount spent on fish products in the last 2 years\n",
+    "- `MntMeatProducts` - amount spent on meat products in the last 2 years\n",
+    "- `MntFruits` - amount spent on fruits products in the last 2 years\n",
+    "- `MntSweetProducts` - amount spent on sweet products in the last 2 years\n",
+    "- `MntWines` - amount spent on wine products in the last 2 years\n",
+    "- `MntGoldProds` - amount spent on gold products in the last 2 years\n",
+    "\n",
+    "**Number of Purchases per Type**\n",
+    "\n",
+    "- `NumDealsPurchases` - number of purchases made with discount\n",
+    "- `NumCatalogPurchases` - number of purchases made using catalogue\n",
+    "- `NumStorePurchases` - number of purchases made directly in stores\n",
+    "- `NumWebPurchases` - number of purchases made through company’s web site\n",
+    "- `NumWebVisitsMonth` - number of visits to company’s web site in the last month\n",
+    "\n",
+    "**Cost and Revenue**\n",
+    "\n",
+    "- `Z_CostContact = 3` (Cost to contact a customer)\n",
+    "- `Z_Revenue = 11` (Revenue after client accepting campaign)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4719b925-a456-474f-be16-67faaf42e4c6",
+   "id": "3a5d0fbb-bfde-4927-b24a-f9911d88d2c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf9b8ce1-5e9b-4ad8-8f99-cf826c26a8bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d05b401-9b60-416f-a677-33153437186e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0f29cfa-3816-4fe7-81f6-2c3adfa95e25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d2b384d-9ca9-424e-9202-cb12a0b90db0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e00aeb8-941d-4ecc-bce8-c960e6bb1a70",
    "metadata": {},
    "outputs": [],
    "source": []
