Update [Import Libraries + Datasets] Response Prediction Classification Marketing Campaign.ipynb

--- a/Response Prediction Classification Marketing Campaign.ipynb
+++ b/Response Prediction Classification Marketing Campaign.ipynb
@@ -18,13 +18,13 @@
    "id": "a725811e-4dec-44ed-94ac-7d7226bfefe7",
    "metadata": {},
    "source": [
-    "# **Marketing Campaign - by Datalicious**\n",
+    "# **✨ Marketing Campaign - by Datalicious ✨**\n",
     "\n",
     "<!-- ![banner.png](https://raw.githubusercontent.com/nurimammasri/Marketing-Campaign-Model-Prediction-by-Datalicious/main/assets/banner.png) -->\n",
     "\n",
     "![banner.png](attachment:9ea4b378-8051-46c2-be3d-76f44544a351.png)\n",
     "\n",
-    "**Members of Datalicious:**\n",
+    "**✅ Members of Datalicious ✅**\n",
     "\n",
     "1. Nur Imam Masri\n",
     "2. Astuti Rahmawati\n",
@@ -42,7 +42,7 @@
    "id": "92173054-a69b-4323-ab7e-abc390d051b1",
    "metadata": {},
    "source": [
-    "## **Table of Content**\n",
+    "## **📍 Table of Content 📍**\n",
     "-"
    ]
   },
@@ -51,9 +51,9 @@
    "id": "386aad94-fd97-42fe-b23b-2d9f99c51f0e",
    "metadata": {},
    "source": [
-    "## **Business Understanding**\n",
+    "## **⛳ Business Understanding ⛳**\n",
     "\n",
-    "### **Problem Statement**:\n",
+    "### **📌 Problem Statement**:\n",
     "\n",
     "**Lotto Mart** adalah sebuah supermarket yang bergerak dibidang retail,  menjual berbagai jenis produk seperti Fish, Meat, Fruits, Sweet Products, Wines, dan Gold Products. Selama 6 bulan terakhir,  Marketing Team melakukan campaign berupa pemberian discount vouchers kepada semua customer melalui  Broadcast Message. Namun, setelah campaign  dilakukan, justru Lotto Mart menghadapi beberapa permasalahan sebagai berikut :\n",
     "- **Response rate** dari marketing campaign yang dilakukan rendah yaitu sekitar 14.91%\n",
@@ -62,7 +62,7 @@
     "\n",
     "Berdasarkan hal tersebut,  Marketing Team meminta tim data untuk menganalisis permasalahan yang terjadi.  Selanjutnya perusahaan ingin membuat marketing campaign yang tepat sasaran  sesuai dengan **karakteristik customer**. Strategi ini diharapkan  mampu **meningkatkan response rate**,  **meminimalisasi cost**, dan kemudian **meningkatkan profit**\n",
     "\n",
-    "### **Roles**\n",
+    "### **📌 Roles**\n",
     "\n",
     "Sebagai **tim data** di Supermarket Lotto Mart, untuk menganalisis keberhasilan marketing campaign selanjutnya. Berikut adalah beberapa roles beserta PIC yang berkontribusi dalam menyelesaikan permasalahan di Lotto Mart:\n",
     "\n",
@@ -98,17 +98,17 @@
     "    PIC: `Siti Hajjah Mardiah` dan `Astuti Rahmawati`\n",
     "\n",
     "\n",
-    "### **Goals**:\n",
+    "### **📌 Goals**:\n",
     "\n",
     "Perusahaan ingin meningkatkan **response rate** dan  meminimalisasi **marketing campaign cost** sehingga dapat memaksimalkan **profit**. \n",
     "\n",
     "\n",
-    "### **Objectives**:\n",
+    "### **📌 Objectives**:\n",
     "\n",
     "Membuat classification model untuk **memprediksi kelompok customer yang akan merespon campaign** agar dapat **meminimalisasi biaya pemasaran dan memaksimalkan keuntungan** pada campaign marketing berikutnya.\n",
     "\n",
     "\n",
-    "### **Business Metrics**:\n",
+    "### **📌 Business Metrics**:\n",
     "\n",
     "- **Response Rate/RR**\n",
     "    \n",
@@ -128,7 +128,7 @@
     "\n",
     "        _**Indicator ROI :**_ 3:1 to 5:1 is good (Manzer  2017).  \n",
     "        \n",
-    "**References :**\n",
+    "**📝 References :**\n",
     "\n",
     "- Efti S.  2018. Sales Benchmarks: The 30/50 rule for cold emailing & cold calling. diakses 20 Mei 2023. https://blog.close.com/sales-benchmarks/ \n",
     "\n",
@@ -144,7 +144,7 @@
    "id": "7b20fb6d-924e-4b53-ab25-3874028c4501",
    "metadata": {},
    "source": [
-    "# **Data Preparation**"
+    "# **🛒 Data Preparation 🛒**"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "id": "2be96e4a-92e6-4610-9265-6d387add9214",
    "metadata": {},
    "source": [
-    "## **Data Description**\n",
+    "## **🕹 Data Description 🕹**\n",
     "\n",
     "```\n",
     "🚨✨ This project is from Final Project Data Science Bootcamp Rakamin Academy Batch 32 ✨🚨\n",
@@ -217,28 +217,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a5d0fbb-bfde-4927-b24a-f9911d88d2c3",
+   "cell_type": "markdown",
+   "id": "3883f4ab-74f5-43a5-9595-c7e97c03bd26",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## **Import Libraries**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cf9b8ce1-5e9b-4ad8-8f99-cf826c26a8bb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objs as go\n",
+    "import plotly.offline as pyoff\n",
+    "\n",
+    "# Ignores any warning\n",
+    "# import warnings \n",
+    "# warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "plt.style.use('seaborn')\n",
+    "sns.set(rc={'figure.figsize':(15, 8)})\n",
+    "\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "pd.set_option('float_format', '{:f}'.format)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d05b401-9b60-416f-a677-33153437186e",
+   "cell_type": "markdown",
+   "id": "db14579c-df7c-4bd5-8c26-07c972fdc0f6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## **Import Dataset**"
+   ]
   },
   {
    "cell_type": "code",
@@ -246,7 +266,14 @@
    "id": "f0f29cfa-3816-4fe7-81f6-2c3adfa95e25",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# missing_values = ['n/a', 'na', 'nan', '-', '--', 'null', 'Null', ' ', '-1', -1]\n",
+    "# source = 'https://raw.githubusercontent.com/nurimammasri/Marketing-Campaign-Model-Prediction-by-Datalicious/main/data/marketing_campaign.csv'\n",
+    "source = 'data/marketing_campaign.csv'\n",
+    "# df = pd.read_csv(source, na_values = missing_values)\n",
+    "df = pd.read_csv(source, na_values = missing_values)\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
